--- a/index.html
+++ b/index.html
@@ -51,7 +51,7 @@
     <main>
         <section class="hero">
             <div class="container hero-container">
-                <h1 class="main-title">ЕФЕКТИВНІ РІШЕННЯ ДЛЯ ВАШОГО БІЗНЕСУ</h1>
+                <h1 class="main-title">Ефективні рішення для вашого бізнесу</h1>
                 <button class="modal-button" type="button" data-modal-open>Замовити послугу</button>
             </div>
         </section>              
@@ -370,17 +370,20 @@
             <div class="footer-subscription-container">
                 <strong class="footer-links-title">Підпишіться на розсилку</strong>
                 <div class="subscription-input-wrapper">
-                <form >
+                <form class="subscription-form">
                     <label class="subscription-form-field">
                         <input class="subscription-form-input" name="user_mail" type="email" placeholder="E-mail">
                     </label>
+                    <button class="subscription-form-submit-btn" type="submit">
+                        <span class="subscription-form-text">Підписатися
+                        <svg class="subscription-icon" width="24" height="24">
+                            <use href="/images/sprite.svg#icon-icon-send"></use>
+                        </svg>
+                    </span> 
+
+                    </button>
                 </form>
-                <button class="subscription-form-submit-btn" type="submit">
-                    Підписатися
-                    <svg class="subscription-icon" width="24" height="24">
-                        <use href="/images/sprite.svg#icon-icon-send"></use>
-                    </svg>
-                </button>
+
                 </div>
             </div>
         </div>
@@ -398,7 +401,7 @@
 
             <form class="contact-form">
                 <label class="contact-form-field">
-                    <p class="contact-text-name">Ім'я</p>
+                    <span class="contact-text-name">Ім'я</span>
                     <span class="contact-form-input-wrapper">
                         <input class="contact-form-input" name="user_name" type="text" required minlength="3">
                         <svg class="contact-form-icon" width="18" height="18">
@@ -407,7 +410,7 @@
                     </span>
                 </label>
                 <label class="contact-form-field">
-                    <p class="contact-text-name">Телефон</p>
+                    <span class="contact-text-name">Телефон</span>
                     <span class="contact-form-input-wrapper">
                         <input class="contact-form-input" name="user_phone" type="tel" required pattern="[0-9]{3}-[0-9]{4}-[0-9]{3}">
                         <svg class="contact-form-icon" width="18" height="18">
@@ -416,7 +419,7 @@
                     </span>
                 </label>
                 <label class="contact-form-field">
-                    <p class="contact-text-name">Пошта</p>
+                    <span class="contact-text-name">Пошта</span>
                     <span class="contact-form-input-wrapper">
                     <input class="contact-form-input" name="user_mail" type="email" required>
                         <svg class="contact-form-icon" width="18" height="18">
@@ -425,22 +428,19 @@
                     </span>
                 </label>
                 <label class="contact-form-field">
-                    <p class="contact-text-name">Коментар</p>                    
+                    <span class="contact-text-name">Коментар</span>                    
                     <textarea class="contact-form-message" name="user_message" placeholder="Введіть текст"></textarea>
                 </label>
 
                 <div class="contact-form-checkbox-wrapper">
                     <input class="contact-form-checkbox visuality-hidden" name="accept_policy" type="checkbox" id="policy-checkbox" required>
                     <label class="contact-form-checkbox-label" for="policy-checkbox" >
-                        Погоджуюся з розсилкою та приймаю &nbsp <a href="#"> Умови договору</a>
+                        Погоджуюся з розсилкою та приймаю &nbsp; <a href="#">Умови договору</a>
                     </label>
                 </div>
 
                 <button class="contact-form-submit-btn" type="submit">Відправити</button>
             </form>
-
-
-
         </div>
     </div>
 
