--- a/index.html
+++ b/index.html
@@ -58,6 +58,7 @@
         <!--Feature--> 
         <section class="feature-text">
             <div class="container">
+                <h2 class="visuality-hidden">Можливості</h2>
                 <ul class="feature-list">
                     <li class="feature-list-items list">
                         <div class="feature-wrapper">
@@ -369,22 +370,16 @@
 
             <div class="footer-subscription-container">
                 <strong class="footer-links-title">Підпишіться на розсилку</strong>
-                <div class="subscription-input-wrapper">
                 <form class="subscription-form">
-                    <label class="subscription-form-field">
-                        <input class="subscription-form-input" name="user_mail" type="email" placeholder="E-mail">
-                    </label>
+                    <input class="subscription-form-input" name="user_mail" type="email" placeholder="E-mail">
                     <button class="subscription-form-submit-btn" type="submit">
                         <span class="subscription-form-text">Підписатися
-                        <svg class="subscription-icon" width="24" height="24">
-                            <use href="/images/sprite.svg#icon-icon-send"></use>
-                        </svg>
-                    </span> 
-
+                            <svg class="subscription-icon" width="24" height="24">
+                                <use href="/images/sprite.svg#icon-icon-send"></use>
+                            </svg>
+                        </span>                
                     </button>
                 </form>
-
-                </div>
             </div>
         </div>
     </footer>
