--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/modern-normalize/1.1.0/modern-normalize.min.css" integrity="sha512-wpPYUAdjBVSE4KJnH1VR1HeZfpl1ub8YT/NKx4PuQ5NmX2tKuGu6U/JRp5y+Y8XG2tV+wKQpNHVUX03MfMFn9Q==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="stylesheet" href="./css/main.min.css">
 </head>
 <body>
     <header class="page-header">
@@ -17,28 +17,28 @@
             <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
             <nav class="navigation">
                 <ul class="nav-list list">
-                    <li class="nav-list-item">
-                        <a class="nav-list-link nav-list-link-hover link" href="#"><span class="accent">Студія</span></a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link nav-list-link-hover link" href="#"><span class="accent">Студія</span></a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="portfolio.html">Портфоліо</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="portfolio.html">Портфоліо</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="#">Контакти</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="#">Контакти</a>
                     </li>
                 </ul>
             </nav>
             <ul class="contacts-list list">
-                <li class="contact-list-item">
-                    <a class="contact-mail link" href="mailto:info@devstudio.com">
+                <li class="contact-list__item">
+                    <a class="contact-list__information link" href="mailto:info@devstudio.com">
                         <svg class="contact-item" width="16" height="12">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                 </a>
                 </li>
-                <li class="contact-list-item">
-                    <a class="contact-phone link" href="tel:+380961111111">
+                <li class="contact-list__item">
+                    <a class="contact-list__information link" href="tel:+380961111111">
                         <svg class="contact-item" width="10" height="16">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                     </svg>
@@ -60,41 +60,41 @@
             <div class="container">
                 <h2 class="visuality-hidden">Можливості</h2>
                 <ul class="feature-list">
-                    <li class="feature-list-items list">
-                        <div class="feature-wrapper">
-                            <svg class="feature-images"  width="70" height="70">
+                    <li class="feature-list__items list">
+                        <div class="feature-list__wrapper">
+                            <svg class="feature-list__images"  width="70" height="70">
                                 <use href="./images/sprite.svg#icon-antenna"></use>
                             </svg>
                         </div>                            
-                        <h3 class="feature-item">УВАГА ДО ДЕТАЛЕЙ</h3>
-                        <p class="feature-list-item">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
+                        <h3 class="feature-list__item">УВАГА ДО ДЕТАЛЕЙ</h3>
+                        <p class="feature-list__text">Ідейні міркування, і навіть початок повсякденної роботи з формування позиції.</p>
                     </li>
-                    <li class="feature-list-items list">
-                        <div class="feature-wrapper">
-                            <svg class="feature-images"  width="70" height="70">
+                    <li class="feature-list__items list">
+                        <div class="feature-list__wrapper">
+                            <svg class="feature-list__images"  width="70" height="70">
                                 <use href="./images/sprite.svg#icon-clock"></use>
                             </svg>
                         </div>  
-                        <h3 class="feature-item">ПУНКТУАЛЬНІСТЬ</h3>
-                        <p class="feature-list-item">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
+                        <h3 class="feature-list__item">ПУНКТУАЛЬНІСТЬ</h3>
+                        <p class="feature-list__text">Завдання організації, особливо рамки і місце навчання кадрів тягне у себе.</p>
                     </li>
-                    <li class="feature-list-items list">
-                        <div class="feature-wrapper">
-                            <svg class="feature-images"  width="70" height="70">
+                    <li class="feature-list__items list">
+                        <div class="feature-list__wrapper">
+                            <svg class="feature-list__images"  width="70" height="70">
                                 <use href="./images/sprite.svg#icon-diagram"></use>
                             </svg>
                         </div>  
-                        <h3 class="feature-item">ПЛАНУВАННЯ</h3>
-                        <p class="feature-list-item">Так само консультація з широким активом значною мірою зумовлює.</p>
+                        <h3 class="feature-list__item">ПЛАНУВАННЯ</h3>
+                        <p class="feature-list__text">Так само консультація з широким активом значною мірою зумовлює.</p>
                     </li>
-                    <li class="feature-list-items list">
-                        <div class="feature-wrapper">
-                            <svg class="feature-images"  width="70" height="70">
+                    <li class="feature-list__items list">
+                        <div class="feature-list__wrapper">
+                            <svg class="feature-list__images"  width="70" height="70">
                                 <use href="./images/sprite.svg#icon-astronaut"></use>
                             </svg>
                         </div>  
-                        <h3 class="feature-item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
-                        <p class="feature-list-item">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
+                        <h3 class="feature-list__item">СУЧАСНІ ТЕХНОЛОГІЇ</h3>
+                        <p class="feature-list__text">Значимість цих проблем настільки очевидна, що реалізація планових завдань.</p>
                     </li>
                 </ul>
             </div>
@@ -102,18 +102,18 @@
         <section class="feature-image">
             <div class="container">
                 <h2 class="subtitle">Чим ми займаємося</h2>
-                <ul class="feature-list-photos">
-                    <li class="feature-list-photo list">
+                <ul class="feature-list__photos">
+                    <li class="feature-list__photo list">
                         <img src="./images/img_001.jpg" alt="робочі інструменти">
-                        <strong class="feature-list-text">Десктопні додатки</strong>
+                        <strong class="feature-list__signature">Десктопні додатки</strong>
                     </li>
-                    <li class="feature-list-photo list">
+                    <li class="feature-list__photo list">
                         <img src="./images/img_002.jpg" alt="робочі інструменти">
-                        <strong class="feature-list-text">Мобільні додатки</strong>
+                        <strong class="feature-list__signature">Мобільні додатки</strong>
                     </li>
-                    <li class="feature-list-photo list">
+                    <li class="feature-list__photo list">
                         <img src="./images/img_003.jpg" alt="робочі інструменти">
-                        <strong class="feature-list-text">Дизайнерські рішення</strong>
+                        <strong class="feature-list__signature">Дизайнерські рішення</strong>
                     </li>
                 </ul>
             </div>
@@ -123,11 +123,11 @@
             <div class="container">
                 <h2 class="subtitle">Наша команда</h2>
                 <ul class="about-team">
-                    <li class="about-team-items list">
+                    <li class="about-team__items list">
                         <img src="./images/img-1(1).jpg" width="270" alt="команда">
-                        <div class="about-team-text">
-                            <h3 class="about-team-name">Ігор Дем'яненко</h3>
-                            <p class="about-team-item">Product Designer</p>
+                        <div class="about-team__text">
+                            <h3 class="about-team__name">Ігор Дем'яненко</h3>
+                            <p class="about-team__item">Product Designer</p>
                             <ul class="social-list list">
                                 <li class="social-list-item">
                                     <a class="social-list-link" href="">
@@ -160,11 +160,11 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="about-team-items list">
+                    <li class="about-team__items list">
                         <img src="./images/img-1(2).jpg" width="270" alt="команда">
-                        <div class="about-team-text">
-                            <h3 class="about-team-name">Ольга Рєпіна</h3>
-                            <p class="about-team-item">Frontend Developer</p>
+                        <div class="about-team__text">
+                            <h3 class="about-team__name">Ольга Рєпіна</h3>
+                            <p class="about-team__item">Frontend Developer</p>
                             <ul class="social-list list">
                                 <li class="social-list-item">
                                     <a class="social-list-link" href="">
@@ -197,11 +197,11 @@
                             </ul>
                         </div>
                     </li>
-                    <li class="about-team-items list">
+                    <li class="about-team__items list">
                         <img src="./images/img-1(3).jpg" width="270" alt="команда">
-                        <div class="about-team-text">
-                            <h3 class="about-team-name">Микола Тарасов</h3>
-                            <p class="about-team-item">Marketing</p>  
+                        <div class="about-team__text">
+                            <h3 class="about-team__name">Микола Тарасов</h3>
+                            <p class="about-team__item">Marketing</p>  
                             <ul class="social-list list">
                                 <li class="social-list-item">
                                     <a class="social-list-link" href="">
@@ -234,11 +234,11 @@
                             </ul>                              
                         </div>
                     </li>
-                    <li class="about-team-items list">
+                    <li class="about-team__items list">
                         <img src="./images/img-1(4).jpg" width="270" alt="команда">
-                        <div class="about-team-text">
-                            <h3 class="about-team-name">Михайло Єрмаков</h3>
-                            <p class="about-team-item">UI Designer</p> 
+                        <div class="about-team__text">
+                            <h3 class="about-team__name">Михайло Єрмаков</h3>
+                            <p class="about-team__item">UI Designer</p> 
                             <ul class="social-list list">
                                 <li class="social-list-item">
                                     <a class="social-list-link" href="">
@@ -277,45 +277,45 @@
         <section class="our-clients">
             <div class="container clients-container">
                 <h2 class="subtitle">Постійні клієнти</h2>
-                <ul class="about-clients list">
-                    <li class="clients">
-                        <a class="clients-wrapper" href="">
-                            <svg class="clients-logo" width="106" height="60">
+                <ul class="clients list">
+                    <li class="clients__about">
+                        <a class="clients__wrapper" href="">
+                            <svg class="clients_logo" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo-1"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients">
-                        <a class="clients-wrapper" href="">
-                            <svg class="clients-logo" width="106" height="60">
+                    <li class="clients__about">
+                        <a class="clients__wrapper" href="">
+                            <svg class="clients_logo" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo-2"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients">
-                        <a class="clients-wrapper" href="">
-                            <svg class="clients-logo" width="106" height="60">
+                    <li class="clients__about">
+                        <a class="clients__wrapper" href="">
+                            <svg class="clients_logo" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo-3"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients">
-                        <a class="clients-wrapper" href="">
-                            <svg class="clients-logo" width="106" height="60">
+                    <li class="clients__about">
+                        <a class="clients__wrapper" href="">
+                            <svg class="clients_logo" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo-4"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients">
-                        <a class="clients-wrapper" href="">
-                            <svg class="clients-logo" width="106" height="60">
+                    <li class="clients__about">
+                        <a class="clients__wrapper" href="">
+                            <svg class="clients_logo" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo-5"></use>
                             </svg>
                         </a>
                     </li>
-                    <li class="clients">
-                        <a class="clients-wrapper" href="">
-                            <svg class="clients-logo" width="106" height="60">
+                    <li class="clients__about">
+                        <a class="clients__wrapper" href="">
+                            <svg class="clients_logo" width="106" height="60">
                                 <use href="./images/sprite.svg#icon-logo-6"></use>
                             </svg>
                         </a>
@@ -430,7 +430,7 @@
                 <div class="contact-form-checkbox-wrapper">
                     <input class="contact-form-checkbox visuality-hidden" name="accept_policy" type="checkbox" id="policy-checkbox" required>
                     <label class="contact-form-checkbox-label" for="policy-checkbox" >
-                        Погоджуюся з розсилкою та приймаю &nbsp; <a href="#">Умови договору</a>
+                        Погоджуюся з розсилкою та приймаю &nbsp; <a class="link" href="#">Умови договору</a>
                     </label>
                 </div>
 
