--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <nav class="navigation">
                 <ul class="nav-list list">
                     <li class="nav-list__item">
-                        <a class="nav-list__link nav-list-link-hover link" href="#"><span class="accent">Студія</span></a>
+                        <a class="nav-list__link nav-list__link-hover link" href="#"><span class="accent">Студія</span></a>
                     </li>
                     <li class="nav-list__item">
                         <a class="nav-list__link link" href="portfolio.html">Портфоліо</a>
