--- a/portfolio.html
+++ b/portfolio.html
@@ -17,28 +17,28 @@
             <a class="logo-link link" href="#"><span class="accent">Web</span>Studio</a>
             <nav class="navigation">
                 <ul class="nav-list list">
-                    <li class="nav-list-item">
-                        <a class="nav-list-link link" href="index.html">Студія</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="#">Студія</a>
                     </li>
-                    <li class="nav-list-item">
-                        <a  class="nav-list-link nav-list-link-hover link" href="#"><span class="accent">Портфоліо</span></a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link nav-list__link-hover link" href="portfolio.html"><span class="accent">Портфоліо</span></a>
                     </li>
-                    <li class="nav-list-item">
-                        <a  class="nav-list-link link" href="#">Контакти</a>
+                    <li class="nav-list__item">
+                        <a class="nav-list__link link" href="#">Контакти</a>
                     </li>
                 </ul>
             </nav>
             <ul class="contacts-list list">
-                <li class="contact-list-item">
-                    <a class="contact-mail link" href="mailto:info@devstudio.com">
+                <li class="contact-list__item">
+                    <a class="contact-list__information link" href="mailto:info@devstudio.com">
                         <svg class="contact-item" width="16" height="12">
                             <use href="./images/sprite.svg#icon-envelope"></use>
                         </svg>
                         info@devstudio.com
                     </a>
                 </li>
-                <li class="contact-list-item">
-                    <a class="contact-phone link" href="tel:+380961111111">
+                <li class="contact-list__item">
+                    <a class="contact-list__information link" href="tel:+380961111111">
                         <svg class="contact-item" width="10" height="16">
                             <use href="./images/sprite.svg#icon-smartphone"></use>
                         </svg>
